--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+testing specs for comments
+ name: string
+ comments: text
+ reviews: text
+ 
+ -name must be present
+-name must be between 5 characters and 100 characters
+- comments must be present
+- comment must be between 10 characters an 150 characters
+-reviews must be present
+-reviews must be between 10 characters to 100 characters
+-messofiituser_id must be present
